Centraliser la BDD et exposer l’API utilisateurs pour Interaction
supprimé database dependencies etconfiguration d'interactions-service;
ajout de InteractionStore en mémoire;
RestTemplate client, + CORS support en faisant passer la séléction des profils & la logique de match via l'API user-service au lieu de gérer ca en local.

= Tout s'éxécute parfaitement comme avant, mais c'est user-service qui fait son travail de gestion des données maintenant.